# digital_bussines_card

./: .firebaserc  .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  firebase.json  index.html  manifest.json  package-lock.json  package.json  service_worker.js  styles.css
.firebase/: hosting.ZGlzdA.cache  hosting.cHVibGlj.cache
.github/workflows/: deploy.yml
public/: index.html
src/: App.vue  app.rs  app.scss  main.js  main.rs  state.rs  touch_handler.rs
src/components/: Buttons.vue  Card.vue  English.vue  Korean.vue  Loading.vue  Photo.vue  Social.vue  buttons.rs  card.rs  english.rs  flags.rs  korean.rs  mod.rs  photo.rs  russian.rs  social.rs
src/components/lang/: mod.rs  vietnam.rs
styles/: card.css  common.scss  english.css  korean.css  lang.css  photo.css  russian.css  social.css  vietnam.css
